--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-utils/__pycache__
-venv
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
 .venv
