add ruff and format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,15 @@ dependencies = [
     "seaborn>=0.13.2",
     "streamlit>=1.44.1",
 ]
+
+[dependency-groups]
+dev = ["ruff>=0.11.13"]
+
+[tool.ruff]
+line-length = 120
+indent-width = 4
+target-version = "py312"
+lint.select = ["E", "F", "I"]
+lint.ignore = []
+lint.fixable = ["ALL"]
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
