initial version with simple test page

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ htmlcov
 
 # Others
 .ruff_cache
+
+# Observable Framework
+.DS_Store
+/dist/
+node_modules/
+yarn-error.log
+/src/.observablehq/cache
