--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.1",
     "seaborn>=0.13.2",
-    "streamlit>=1.49.0",
+    "streamlit[pdf]>=1.49.0",
 ]
 
 [dependency-groups]
