--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,23 @@ description = "A comprehensive traffic analysis dashboard for Crystal, Minnesota
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "matplotlib>=3.10.1",
-    "numpy>=2.2.4",
-    "pandas>=2.2.3",
-    "plotly>=6.0.1",
+    "matplotlib>=3.10.6",
+    "numpy>=2.3.3",
+    "pandas>=2.3.2",
+    "plotly>=6.3.0",
     "seaborn>=0.13.2",
-    "streamlit[pdf]>=1.49.0",
+    "streamlit[pdf]>=1.49.1",
 ]
 
 [dependency-groups]
-dev = ["ruff>=0.11.13", "pytest>=8.0.0", "pytest-cov>=6.0.0"]
+dev = [
+    "ruff>=0.13.0",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0"
+]
 
 [tool.ruff]
-line-length = 120
+# line-length = 120
 indent-width = 4
 target-version = "py312"
 lint.select = ["E", "F", "I"]
