--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dev = [
 ]
 
 [tool.ruff]
-# line-length = 120
+line-length = 120
 indent-width = 4
 target-version = "py312"
 lint.select = ["E", "F", "I"]
